change the direction of the navbar to be fixed at bottom on mobiles

--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -61,3 +61,16 @@ body {
 .main {
   overflow-y: auto;
 }
+
+/* Media Query */
+@media only screen and (max-width: 500px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
